src/test/ui/iterators/integral.stderr
error[E0277]: `{integer}` cannot be converted to an iterator
  --> $DIR/integral.rs:2:14
   |
LL |     for _ in 42 {}
   |              ^^ `{integer}` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `{integer}`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `u8` cannot be converted to an iterator
  --> $DIR/integral.rs:4:14
   |
LL |     for _ in 42 as u8 {}
   |              ^^^^^^^^ `u8` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `u8`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `i8` cannot be converted to an iterator
  --> $DIR/integral.rs:6:14
   |
LL |     for _ in 42 as i8 {}
   |              ^^^^^^^^ `i8` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `i8`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `u16` cannot be converted to an iterator
  --> $DIR/integral.rs:8:14
   |
LL |     for _ in 42 as u16 {}
   |              ^^^^^^^^^ `u16` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `u16`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `i16` cannot be converted to an iterator
  --> $DIR/integral.rs:10:14
   |
LL |     for _ in 42 as i16 {}
   |              ^^^^^^^^^ `i16` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `i16`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `u32` cannot be converted to an iterator
  --> $DIR/integral.rs:12:14
   |
LL |     for _ in 42 as u32 {}
   |              ^^^^^^^^^ `u32` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `u32`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `i32` cannot be converted to an iterator
  --> $DIR/integral.rs:14:14
   |
LL |     for _ in 42 as i32 {}
   |              ^^^^^^^^^ `i32` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `i32`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `u64` cannot be converted to an iterator
  --> $DIR/integral.rs:16:14
   |
LL |     for _ in 42 as u64 {}
   |              ^^^^^^^^^ `u64` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `u64`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `i64` cannot be converted to an iterator
  --> $DIR/integral.rs:18:14
   |
LL |     for _ in 42 as i64 {}
   |              ^^^^^^^^^ `i64` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `i64`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `usize` cannot be converted to an iterator
  --> $DIR/integral.rs:20:14
   |
LL |     for _ in 42 as usize {}
   |              ^^^^^^^^^^^ `usize` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `usize`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `isize` cannot be converted to an iterator
  --> $DIR/integral.rs:22:14
   |
LL |     for _ in 42 as isize {}
   |              ^^^^^^^^^^^ `isize` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `isize`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error[E0277]: `{float}` cannot be converted to an iterator
  --> $DIR/integral.rs:24:14
   |
LL |     for _ in 42.0 {}
   |              ^^^^ `{float}` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `{float}`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0277`.
